--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,11 @@
 /* Put your CSS Styling here! */
+
+h2, a{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+    font-weight: bold;
+    font-size: 17px;
+}
+
