--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 /* Put your CSS Styling here! */
 
-h2, a{
+h2, a, h3{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -8,4 +8,5 @@ a {
     font-weight: bold;
     font-size: 17px;
 }
+
 
