--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,28 @@
                     <title>Shop Home</title>
     </head>
     <body>
-            <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="#">Yair's Shop</a>
+              </div>
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="shop">Shop</a></li>
+              </ul>
+              <form class="navbar-form navbar-left" action="/shop" method = 'POST'>
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search" name="search">
+                  <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit" value = "submit">
+                      <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </nav>
+            <!-- <nav class="navbar navbar-default">
                     <div class="container-fluid">
                       <div class="navbar-header">
                         <a class="navbar-brand" href="#">My Web App</a>
@@ -24,13 +45,14 @@
                       <ul class="nav navbar-nav">
                         <li class="active"><a href="">Home</a></li>
                         <li><a href="shop">Shop</a></li>
-                        <!-- <li><a href="#">Page 2</a></li>
-                        <li><a href="#">Page 3</a></li> -->
                       </ul>
                     </div>
-                  </nav>
-        <div class="container"></div>
-            <h2>Home</h2>
-        </div>
+                  </nav> -->
+
+            <div class="container">
+                <h2>Welcome!</h2>
+                <br><br><br>
+                
+              </div>
     </body>
 </html>
