--- a/templates/shop.html
+++ b/templates/shop.html
@@ -13,30 +13,54 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
-            <nav class="navbar navbar-default">
-                    <div class="container-fluid">
-                      <div class="navbar-header">
-                        <a class="navbar-brand" href="#">My Web App</a>
-                      </div>
-                      <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home</a></li>
-                        <li><a href="shop">Shop</a></li>
-                        <!-- <li><a href="#">Page 2</a></li>
-                        <li><a href="#">Page 3</a></li> -->
-                      </ul>
-                    </div>
-                  </nav>
+
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="#">Yair's Shop</a>
+              </div>
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="shop">Shop</a></li>
+              </ul>
+              <!-- <form class="navbar-form navbar-left" action="/">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search" name="search">
+                  <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit">
+                      <i class="glyphicon glyphicon-search" ></i>
+                    </button>
+                  </div>
+                </div>
+              </form> -->
+            </div>
+          </nav>
+      
         
-                  <div class="container">
-                        <h2>SmartPhones For Sale</h2>
-                        <br><br><br>
-                        <div class="list-group">
-                          {% for p in phones %}
-                          <a href="#" class="list-group-item">{{p}}</a>
-                          {% endfor %}
-                        </div>
-                        
-                      </div>
+          <div class="container">
+            {% if(result == 'null'): %}
+              <h3>SmartPhones For Sale</h3>
+            {% else: %}
+              <h3>Search for: ' {{ result }} '</h3>
+            {% endif %}
+            <br><br><br>
+            {% if phones[0] != null: %}
+              <div class="list-group">
+                {% for p in phones %}
+                <a href="#" class="list-group-item">{{p.name}}  <span class="badge badge-primary badge-pill">{{ p.quantity }}</span></a>
+                {% endfor %}
+            {% else: %}
+                <h5>There's no related products.</h5>
+            {% endif %}
+          </div>
+
+
+
+          </div>
+
+
+        
+
 
                       
                       
